cvd/service.yml
apiVersion: v1
kind: Service 
metadata:
  name: srv-cvd
  namespace: cvd
spec:
   selector:
      app: crud
   type: LoadBalancer
   ports:
      - protocol: TCP
        port: 80
        targetPort: 80
        nodePort: 30001
